--- a/UpdateOrders.ui
+++ b/UpdateOrders.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1428</width>
-    <height>999</height>
+    <height>1010</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -494,7 +494,7 @@ QPushButton:pressed {
           </font>
          </property>
          <property name="text">
-          <string>Контактный номер</string>
+          <string>Контактные номера</string>
          </property>
         </widget>
        </item>
@@ -888,6 +888,18 @@ QPushButton:pressed {
          </property>
          <property name="text">
           <string>Электронная почта</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="techLabel">
+         <property name="styleSheet">
+          <string notr="true">QLabel {
+	color: transparent;
+}</string>
+         </property>
+         <property name="text">
+          <string>TextLabel</string>
          </property>
         </widget>
        </item>
@@ -2699,7 +2711,42 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="1" column="0" rowspan="4">
+     <item row="1" column="1" rowspan="2" colspan="3">
+      <widget class="QLabel" name="label_31">
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Дата / время приема</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1" colspan="3">
+      <widget class="QLineEdit" name="receptionLine">
+       <property name="minimumSize">
+        <size>
+         <width>160</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QLineEdit {
+	border: 1px solid gray;
+    border-radius: 7px;
+    background-color: #dbdcf7;
+	padding-left: 3px;
+}</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" rowspan="5">
       <widget class="QTextEdit" name="feedback">
        <property name="maximumSize">
         <size>
@@ -2725,7 +2772,63 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
+     <item row="5" column="2">
+      <widget class="QPushButton" name="openMapButton">
+       <property name="minimumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="focusPolicy">
+        <enum>Qt::StrongFocus</enum>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">QPushButton {
+	background-color: #dbdcf7;
+	border: 1px solid #999999;
+}
+
+QPushButton:hover {
+	background-color: #d5d6f0;
+	border: 1px solid #acacac;
+}
+
+QPushButton:pressed {
+	background-color: #cbcde6;
+	border: 2px solid #999999;
+}</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="icon">
+        <iconset resource="images.qrc">
+         <normaloff>:/images/map.png</normaloff>:/images/map.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>36</width>
+         <height>36</height>
+        </size>
+       </property>
+       <property name="autoDefault">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="3">
       <widget class="QPushButton" name="saveUpdatedInfo">
        <property name="minimumSize">
         <size>
@@ -2779,45 +2882,18 @@ QPushButton:pressed {
        </property>
       </widget>
      </item>
-     <item row="0" column="1" rowspan="4">
-      <widget class="QPushButton" name="openMapButton">
-       <property name="minimumSize">
+     <item row="4" column="1">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
         <size>
-         <width>120</width>
-         <height>25</height>
+         <width>20</width>
+         <height>40</height>
         </size>
        </property>
-       <property name="font">
-        <font>
-         <pointsize>10</pointsize>
-        </font>
-       </property>
-       <property name="focusPolicy">
-        <enum>Qt::StrongFocus</enum>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton {
-	background-color: #dbdcf7;
-	border: 1px solid #999999;
-}
-
-QPushButton:hover {
-	background-color: #d5d6f0;
-	border: 1px solid #acacac;
-}
-
-QPushButton:pressed {
-	background-color: #cbcde6;
-	border: 2px solid #999999;
-}</string>
-       </property>
-       <property name="text">
-        <string>Открыть карту</string>
-       </property>
-       <property name="autoDefault">
-        <bool>false</bool>
-       </property>
-      </widget>
+      </spacer>
      </item>
     </layout>
    </item>
